@@ -1,3 +1,9 @@
+2017-05-01  Janus Weil  <janus@gcc.gnu.org>
+
+	Backport from trunk
+	PR fortran/80392
+	* gfortran.dg/proc_ptr_comp_49.f90: New test case.
+
 2017-04-21  Janus Weil  <janus@gcc.gnu.org>
 
 	Backport from trunk
